--- a/angular-mvn-bower/src/main/resources/public/index.html
+++ b/angular-mvn-bower/src/main/resources/public/index.html
@@ -19,9 +19,10 @@
 				<a class="navbar-brand" href="#">Angular+Rest+SpringSecurity</a>
 			</div>
 
-			<div class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
-					<li class="active"><a href="#!/">Home</a></li>
+			<div class="collapse navbar-collapse" >
+				<ul ng-show="user" class="nav navbar-nav">
+					<li ng-class="{active: $route.current.activeNav == 'news'}"><a href="#!/">News</a></li>
+					<li ng-class="{active: $route.current.activeNav == 'personas'}"><a href="#!/personas">Personas</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right" ng-show="user">
 					<li class="dropdown">
